--- a/README
+++ b/README
@@ -75,6 +75,9 @@ uniprocessor_rr -> Here you can find the round robin algorithm for a
 uniprocessor. We have left 2 print statements in pick_next_task and enqueue
 in order to see that the RR algorithm takes place.
 
+mmr -> In this branch you can find the round robin algorithm for smp.
+
+smp_devel -> Here you can find the part 2 of our assignment.
 RESOURCES USED:
 
 1. Linux Cross Reference
